/put detecting client ip and bugfix
